--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-/src/main/resources/*.properties
+application.properties
 
 ### STS ###
 .apt_generated
