--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ dependencies {
 
 	/* Developer Tools */
 	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	/* Security */
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 	/* SQL */
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
