--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	/* NoSQL */
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	/* I/O */
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
