--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 
 	/* I/O */
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	/* Email */
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
